--- a/Server/Database/pom.xml
+++ b/Server/Database/pom.xml
@@ -4,11 +4,24 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>via.sep3</groupId>
+    <groupId>sep3db</groupId>
     <artifactId>Database</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <packaging>jar</packaging>
+
+    <properties>
+        <java.version>12</java.version>
+    </properties>
+
+    <dependencies>
+        <dependency>
+            <groupId>org.mongodb</groupId>
+            <artifactId>mongo-java-driver</artifactId>
+            <version>3.12.0</version>
+        </dependency>
+
+    </dependencies>
 
     <build>
         <plugins>
@@ -22,6 +35,5 @@
             </plugin>
         </plugins>
     </build>
-
 
 </project>
