--- a/Server/Business/pom.xml
+++ b/Server/Business/pom.xml
@@ -43,6 +43,11 @@
             <artifactId>gson</artifactId>
             <version>2.8.6</version>
         </dependency>
+        <dependency>
+            <groupId>org.mongodb</groupId>
+            <artifactId>bson</artifactId>
+            <version>4.1.1</version>
+        </dependency>
     </dependencies>
 
     <build>
