--- a/Client/Client/Properties/launchSettings.json
+++ b/Client/Client/Properties/launchSettings.json
@@ -18,6 +18,7 @@
     "Client": {
       "commandName": "Project",
       "launchBrowser": true,
+      "launchUrl": "Services",
       "applicationUrl": "https://localhost:5001;http://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
