--- a/Client/Client/Client.csproj
+++ b/Client/Client/Client.csproj
@@ -5,6 +5,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="BCrypt.Net-Next" Version="4.0.2" />
       <PackageReference Include="Microsoft.AspNetCore.Components.DataAnnotations.Validation" Version="3.2.0-rc1.20223.4" />
       <PackageReference Include="Syncfusion.Blazor" Version="18.3.0.47" />
     </ItemGroup>
